# RecipeAPI

./: .gitignore  Dockerfile  RezeptScraper.py  app.py  dbConnector.py  dbManager.py  debug.py  notizen.md  notizen.txt  pyproject.toml  recipeManager.py  was_geht_aaaaaaaab.txt
Updates/: installDB.py
data/: recipedata.db
templates/: index.html
